--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 html {
 	box-sizing: border-box;
 
 	--background-color: #111729;
 	--text-color: #fff;
-	--underline-color: aqua;
+	--underline-color: rgb(67, 231, 231);
 
 	--primary-color: #12d640;
+	--secondary-color: rgb(61, 214, 214);
 	--white-color: #fff;
 }
 
