--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,8 @@ html {
 	--primary-color: #12d640;
 	--secondary-color: rgb(61, 214, 214);
 	--white-color: #fff;
+	--light-green-color: #60c47c;
+	--light-dark-color: #20293A;
 }
 
 * {
