--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
-@import url('./index.scss');
+@import './index.scss';
+@import './mixins';
 
 body {
 	background-color: var(--background-color);
@@ -18,5 +19,55 @@ body {
 }
 
 section {
-	margin-top: 120px;
+	margin-top: 150px;
+
+	&:not(.intro) {
+		h1 {
+			margin-bottom: 80px;
+		}
+	}
+}
+
+h1 {
+	font-weight: 1000;
+	line-height: 1;
+
+	position: relative;
+
+	width: fit-content;
+
+	background: linear-gradient(to right top, #0ee7e7 10%, #60c47c);
+	@include gradient-text;
+
+	@include media-desktop {
+		font-size: 40px;
+	}
+
+	@include media-mobile {
+		font-size: 32px;
+	}
+
+	&:before {
+		content: '';
+
+		position: absolute;
+		left: 0;
+		bottom: -7px;
+
+		width: 90%;
+		height: 3px;
+		background-color: var(--white-color);
+	}
+
+	&:after {
+		content: '';
+
+		position: absolute;
+		left: 0;
+		bottom: -12px;
+
+		width: 98%;
+		height: 2px;
+		background-color: var(--white-color);
+	}
 }
