--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,2 +1,157 @@
 @import '../../index.scss';
 @import '../../mixins';
+
+$item-border-radius: 20px;
+$item-width: 100%;
+$item-height: 300px;
+
+$text-disappear-time: 0.4s;
+$info-appear-time: 0.7s;
+
+$border-hover-position: 20px;
+$border-hover-style: 5px solid var(--primary-color);
+
+section.projects {
+	ul.projects-list {
+		list-style: none;
+		display: grid;
+
+		@include media-desktop {
+			grid-template-columns: repeat(2, 1fr);
+			gap: 30px;
+		}
+
+		@include media-mobile {
+			grid-template-columns: 1fr;
+		}
+
+		li.project-item {
+			position: relative;
+
+			width: $item-width;
+			height: $item-height;
+
+			border-radius: $item-border-radius;
+
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
+
+			&:hover {
+				.project-info {
+					opacity: 0;
+				}
+
+				.view-more {
+					opacity: 1;
+				}
+			}
+
+			.project-info {
+				position: absolute;
+				bottom: 0;
+				left: 0;
+
+				width: 100%;
+				padding: 20px 10px;
+
+				background-color: rgba(0, 0, 0, 0.6);
+
+				border-bottom-left-radius: $item-border-radius;
+				border-bottom-right-radius: $item-border-radius;
+
+				display: flex;
+				flex-direction: column;
+				gap: 12px;
+
+				opacity: 1;
+				transition: opacity $text-disappear-time ease-in-out;
+
+				h5.project-name {
+					font-size: 20px;
+					font-weight: 700;
+
+					line-height: 1;
+
+					color: #21ee5d;
+				}
+
+				ul.used-technical-stacks {
+					display: flex;
+					gap: 5px;
+
+					padding-left: unset;
+					list-style: none;
+
+					font-size: 12px;
+
+					li {
+						padding: 5px 10px;
+
+						border-radius: 5px;
+
+						background-color: rgba(28, 213, 105, 0.492);
+						border: 1px solid rgb(9, 211, 26);
+					}
+				}
+
+				p.project-description {
+					font-size: 12px;
+				}
+			}
+
+			.view-more {
+				position: absolute;
+
+				width: 100%;
+				height: 100%;
+
+				opacity: 0;
+				transition: opacity $info-appear-time;
+
+				background-color: rgba(0, 0, 0, 0.15);
+
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				border-radius: $item-border-radius;
+
+				&::before, &::after {
+					content: '';
+					position: absolute;
+
+					aspect-ratio: 1/1;
+					width: 70px;
+
+					transition: all 0.5s ease 0s;
+					z-index: 10;
+				}
+
+				&::before {
+					top: $border-hover-position;
+					left: $border-hover-position;
+
+					border-top: $border-hover-style;
+					border-left: $border-hover-style;
+				}
+
+				&::after {
+					bottom: $border-hover-position;
+					right: $border-hover-position;
+
+					border-bottom: $border-hover-style;
+					border-right: $border-hover-style;
+				}
+
+				i {
+					color: rgba(0, 0, 0, 0.85);
+				}
+
+				i:hover {
+					color: var(--primary-color);
+				}
+			}
+		}
+	}
+}
