--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -11,6 +11,8 @@ $info-appear-time: 0.7s;
 $border-hover-position: 20px;
 $border-hover-style: 5px solid var(--primary-color);
 
+$active-green-color: #21ee5d;
+
 section.projects {
 	ul.projects-list {
 		list-style: none;
@@ -73,7 +75,7 @@ section.projects {
 
 					line-height: 1;
 
-					color: #21ee5d;
+					color: $active-green-color;
 				}
 
 				ul.used-technical-stacks {
@@ -117,7 +119,8 @@ section.projects {
 
 				border-radius: $item-border-radius;
 
-				&::before, &::after {
+				&::before,
+				&::after {
 					content: '';
 					position: absolute;
 
@@ -145,11 +148,54 @@ section.projects {
 				}
 
 				i {
-					color: rgba(0, 0, 0, 0.85);
+					font-size: 30px;
+					color: #fefefeda;
 				}
 
 				i:hover {
 					color: var(--primary-color);
+				}
+			}
+		}
+	}
+}
+
+.dark-mode-modal {
+
+	.modal-header {
+		background-color: #555;
+		color: var(--primary-color);
+	}
+
+	.modal-content {
+		background-color: #333;
+		color: var(--white-color);
+	}
+
+	.modal-footer {
+		background-color: #555;
+
+		a {
+			border: 1px solid #fff;
+			border-radius: 5px;
+
+			padding: 5px 10px;
+
+			text-decoration: none;
+			color: #fff;
+
+			display: flex;
+			gap: 10px;
+			align-items: center;
+
+			&:hover {
+				border-color: #21ee5d;
+				color: var(--light-green-color);
+
+				background-color: #20e4472c;
+
+				i {
+					color: $active-green-color;
 				}
 			}
 		}
