--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 @import './index.scss';
 @import './mixins';
 
-body {
+body:has(div#root) {
 	background-color: var(--background-color);
 	color: var(--text-color);
 
@@ -28,7 +28,7 @@ section {
 	}
 }
 
-h1 {
+#root h1 {
 	font-weight: 1000;
 	line-height: 1;
 
