change-to-landing-page

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,9 +4,11 @@
 #root footer {
 
     position: relative;
-    background-color: #6de14a;
+    margin-top: 10vh;
 
-    padding-block-end: 30px;
+    // background-color: #6de14a;
+
+    // padding-block-end: 30px;
 
     .end-section {
         position: absolute;
