add-contact-section

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -43,3 +43,8 @@
 		}
 	}
 }
+
+@mixin hide-particles-background($background: var(--background-color)) {
+	z-index: 0;
+	background: $background;
+}
