--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,43 +1,220 @@
 @import '../../index.scss';
 @import '../../mixins';
 
+@property --rotate {
+	syntax: '<angle>';
+	initial-value: 132deg;
+	inherits: false;
+}
+
 section.contact {
+	$border-radius: 20px;
+	$button-border-radius: 10px;
 
-    $border-radius: 20px;
+	.contact-area {
+		display: grid;
 
-    .contact-area {
+		@include media-desktop {
+			grid-template-columns: repeat(2, 1fr);
+			gap: 30px;
+		}
 
-        display: grid;
+		@include media-mobile {
+			grid-template-columns: 1fr;
+		}
 
-        @include media-desktop {
-            grid-template-columns: repeat(2, 1fr);
-            gap: 30px;
-        }
+		h3 {
+			font-weight: 700;
+			text-transform: uppercase;
+			background-image: linear-gradient( to right,  rgb(32, 205, 41),  rgb(0, 255, 204));
+			@include gradient-text;
+		}
 
-        @include media-mobile {
-            grid-template-columns: 1fr;
-        }
+		.info-section {
+			background-color: rgba(0, 0, 0, 0.25);
+			border: 1px solid var(--white-color);
+			border-radius: $border-radius;
 
-        .info-section {
-            background-color: var(--light-dark-color);
-            border-radius: $border-radius;
+			padding: 10px 20px;
 
-            padding: 30px 15px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
 
-            ul {
-                padding: unset;
-                list-style: none;
+			position: relative;
 
-                li {
-                    display: flex;
-                    gap: 20px;
-                }
-            }
-        }
+			img.top-image {
+				position: absolute;
+				right: 20px;
+				top: -83px;
 
-        .form-section {
-            border: 1px solid white;
-            border-radius: $border-radius;
-        }
-    }
+				height: 90px;
+			}
+
+			.title-wrapper {
+				display: flex;
+				justify-content: center;
+			}
+
+			ul {
+				padding: unset;
+				list-style: none;
+
+				display: flex;
+				flex-direction: column;
+				gap: 2rem;
+
+				li {
+
+					h5 {
+						font-weight: 700;
+						color: var(--primary-color);
+
+						font-size: 22px;
+					}
+
+					
+
+					.contact-details {
+						display: flex;
+						gap: 20px;
+					}
+
+					p {
+						margin-bottom: unset;
+					}
+
+					a {
+						color: var(--white-color);
+					}
+				}
+			}
+		}
+
+		.form-section {
+			border: 1px solid var(--white-color);
+			border-radius: $border-radius;
+
+			padding: 10px 20px;
+
+			display: flex;
+			flex-direction: column;
+			text-align: center;
+
+			form {
+				input,
+				textarea {
+					width: 100%;
+
+					border: 2px solid var(--primary-color);
+					border-radius: 10px;
+
+					padding: 5px 10px;
+
+					margin-bottom: 3px;
+
+					background: var(--light-dark-color);
+					color: var(--white-color);
+				}
+
+				input::placeholder,
+				textarea::placeholder {
+					color: #e4e4e4;
+				}
+
+				.error-message {
+					display: flex;
+
+					color: rgb(228, 7, 7);
+					font-size: smaller;
+
+					padding-left: 10px;
+
+					margin-bottom: 1rem;
+				}
+
+				button {
+					position: relative;
+
+					color: var(--white-color);
+
+					width: 240px;
+					height: 40px;
+
+					border-radius: $button-border-radius;
+
+					.button-border {
+						transition: all 0.3s linear;
+					}
+
+					&:hover {
+						.button-border {
+							background-color: var(--light-green-color);
+						}
+					}
+
+					.button-border {
+						position: absolute;
+						top: 0;
+						left: 0;
+
+						background-color: rgba(0, 0, 0, 0.9);
+
+						border-radius: calc($button-border-radius - 3px);
+
+						width: 100%;
+						height: 100%;
+
+						display: flex;
+						justify-content: center;
+						align-items: center;
+
+						&::before {
+							$increase-width: 4%;
+							$increase-height: 24%;
+
+							content: '';
+							z-index: -1;
+
+							position: absolute;
+							top: calc($increase-height / -2);
+							left: calc($increase-width / -2);
+
+							width: calc(100% + $increase-width);
+							height: calc(100% + $increase-height);
+
+							border-radius: calc($button-border-radius + 2px);
+
+							background-image: linear-gradient(
+								var(--rotate),
+								#3fd59f,
+								#3ebdb0 40%,
+								#a6e14a
+							);
+
+							animation: spin 3s linear infinite;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+@keyframes spinner {
+	0% {
+		transform: translate(-50%, -50%) rotate(0);
+	}
+	100% {
+		transform: translate(-50%, -50%) rotate(360deg);
+	}
+}
+
+@keyframes spin {
+	0% {
+		--rotate: 0deg;
+	}
+	100% {
+		--rotate: 360deg;
+	}
 }
