--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -10,6 +10,9 @@
 $item-gap: 50px;
 
 section.experience {
+	
+	@include hide-particles-background; 
+
 	.section-wrapper {
 		display: flex;
 		flex-direction: column;
