--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -14,8 +14,7 @@ $border-hover-style: 5px solid var(--primary-color);
 $active-green-color: #21ee5d;
 
 section.projects {
-
-	@include hide-particles-background; 
+	@include hide-particles-background;
 
 	ul.projects-list {
 		list-style: none;
@@ -45,7 +44,8 @@ section.projects {
 			transition: box-shadow 0.35s ease-in-out;
 
 			&:hover {
-				box-shadow: 4px 4px 6px 0 rgb(39 186 4 / 95%), 0 6px 20px 0 rgb(69 172 0);
+				box-shadow: 4px 4px 6px 0 rgb(39 186 4 / 95%),
+					0 6px 20px 0 rgb(69 172 0);
 
 				.project-info {
 					opacity: 0;
@@ -104,8 +104,15 @@ section.projects {
 					}
 				}
 
-				p.project-description {
+				.limited-lines {
 					font-size: 12px;
+
+					display: -webkit-box;
+					-webkit-line-clamp: 2;
+					-webkit-box-orient: vertical;
+					
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
 			}
 
@@ -171,7 +178,6 @@ section.projects {
 }
 
 .dark-mode-modal {
-
 	.modal-header {
 		background-color: #555;
 		color: var(--primary-color);
