--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,8 @@ html {
 	--secondary-color: rgb(61, 214, 214);
 	--white-color: #fff;
 	--light-green-color: #60c47c;
-	--light-dark-color: #20293A;
+	--light-dark-color: #20293A; 
+	--dark-blue-color: #042853;
 }
 
 * {
