--- a/src/components/Intro/Intro.scss
+++ b/src/components/Intro/Intro.scss
@@ -2,7 +2,6 @@
 @import '../../mixins';
 
 section.intro {
-
 	.container {
 		display: grid;
 
@@ -13,7 +12,7 @@ section.intro {
 
 		@include media-mobile {
 			grid-template-columns: 1fr;
-            gap: 40px;
+			gap: 40px;
 		}
 	}
 
@@ -39,6 +38,10 @@ section.intro {
 			h3 {
 				font-weight: 700;
 
+				@media screen and (min-width: 769px) {
+					font-size: clamp(1.25rem, 0.9608rem + 0.6017vw, 1.5625rem);
+				}
+
 				.change-text {
 					margin-left: 10px;
 
@@ -56,7 +59,7 @@ section.intro {
 
 			p {
 				margin-bottom: unset;
-				
+
 				strong {
 					color: var(--primary-color);
 				}
@@ -91,19 +94,18 @@ section.intro {
 					opacity: 0;
 
 					transform: translateX(-50%) translateY(-50%) rotate(45deg);
-                    transition: all 0.5s ease-in-out;
+					transition: all 0.5s ease-in-out;
 
-                    z-index: -1;
+					z-index: -1;
 				}
 
 				&:hover {
+					border-color: rgb(33 161 33);
 
-                    border-color: rgb(33 161 33);
+					a {
+						color: var(--light-green-color);
+					}
 
-                    a {
-                        color: var(--light-green-color);
-                    }
-                    
 					&::after {
 						height: 260%;
 						opacity: 1;
