--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -35,7 +35,7 @@ section.contact {
 			border: 1px solid var(--white-color);
 			border-radius: $border-radius;
 
-			padding: 10px 20px;
+			padding: 10px 20px 40px 20px;
 
 			display: flex;
 			flex-direction: column;
