--- a/src/index.scss
+++ b/src/index.scss
@@ -54,3 +54,15 @@ img {
 ul {
 	list-style: none;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+ 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+::-webkit-scrollbar-thumb {
+  background-color: var(--underline-color);
+}
